# hopli

./: .coderabbit.yaml  .envrc  .gitignore  Cargo.toml  README.md  codecov.yml  crates.js  flake.nix  help.html  index-old.html  index.html  package.json  renovate.json  result  rust-toolchain.toml  settings.html  src-files.js
.cargo/: audit.toml  config.toml
.ci/scripts/: bump-version.sh  download-workflow-binaries.sh  get-current-version.sh  get-next-version.sh
.github/: CODEOWNERS  labeler.yml
.github/files/: pr-close-release.md
.github/workflows/: branches.yaml  build-binaries.yaml  build-docker.yaml  build-docs.yaml  build.yaml  cache-deps.yaml  checks-audit.yaml  checks-cargo-deps.yaml  checks-lint.yaml  checks-pre-commit.yaml  checks-zizmor.yaml  checks.yaml  clean-pr.yaml  cleanup.yaml  close-release.yaml  create-release.yaml  merge.yaml  open-pr.yaml  open-release.yaml  package.yaml  pr.yaml  promote-release.yaml  publish-release.yaml  release.yaml  tests.yaml  update-flake-lock.yaml
hopli/: all.html  enum.Commands.html  fn.main.html  index.html  struct.Cli.html
hopli_lib/: all.html  index.html  sidebar-items.js  struct.Address.html
hopli_lib/constants/: constant.DEFAULT_ANNOUNCEMENT_PERMISSIONS.html  constant.DEFAULT_CAPABILITY_PERMISSIONS.html  constant.DEFAULT_NODE_PERMISSIONS.html  constant.DEPLOYSAFEANDMODULEANDINCLUDENODES_IDENTIFIER.html  constant.DEPLOYSAFEMODULE_FUNCTION_IDENTIFIER.html  constant.DOMAIN_SEPARATOR_TYPEHASH.html  constant.ERC_1820_DEPLOYER.html  constant.ERC_1820_REGISTRY_DEPLOY_CODE.html  constant.ERC_1820_SIGNED_DEPLOYMENT_TX.html  constant.ERC_1967_PROXY_CREATION_CODE.html  constant.ETH_VALUE_FOR_ERC1820_DEPLOYER.html  constant.ETH_VALUE_FOR_MULTICALL3_DEPLOYER.html  constant.INIT_KEY_BINDING_FEE.html  constant.MULTICALL3_DEPLOYER.html  constant.MULTICALL3_DEPLOY_CODE.html  constant.SAFE_COMPATIBILITYFALLBACKHANDLER_ADDRESS.html  constant.SAFE_COMPATIBILITY_FALLBACK_HANDLER_ADRESS_V150.html  constant.SAFE_COMPATIBILITY_FALLBACK_HANDLER_DEPLOY_CODE.html  constant.SAFE_COMPATIBILITY_FALLBACK_HANDLER_DEPLOY_CODE_V141.html  constant.SAFE_COMPATIBILITY_FALLBACK_HANDLER_DEPLOY_CODE_V150.html  constant.SAFE_DEPLOYER_ADDRESS.html  constant.SAFE_DEPLOYER_BALANCE.html  constant.SAFE_DIAMOND_PROXY_SINGLETON_DEPLOY_CODE.html  constant.SAFE_MULTISEND_ADDRESS.html  constant.SAFE_MULTISEND_CALL_ONLY_DEPLOY_CODE.html  constant.SAFE_MULTISEND_DEPLOY_CODE.html  constant.SAFE_PROXY_FACTORY_DEPLOY_CODE.html  constant.SAFE_SAFEPROXYFACTORY_ADDRESS.html  constant.SAFE_SAFE_L2_ADDRESS.html  constant.SAFE_SINGLETON_ADDRESS.html  constant.SAFE_SINGLETON_ADDRESS_V141.html  constant.SAFE_SINGLETON_L2_ADDRESS_V141.html  constant.SAFE_SINGLETON_L2_ADDRESS_V150.html  constant.SAFE_TX_TYPEHASH.html  constant.SENTINEL_OWNERS.html  index.html  sidebar-items.js  static.SAFE_SINGLETON_DEPLOY_CODE.html  static.SAFE_SINGLETON_DEPLOY_CODE_V141.html  static.SAFE_SINGLETON_L2_DEPLOY_CODE_V141.html  (+1 more)
hopli_lib/environment_config/: enum.EnvironmentType.html  fn.ensure_environment_and_network_are_set.html  index.html  sidebar-items.js  struct.NetworkConfig.html  struct.NetworkDetail.html  struct.NetworkProviderArgs.html  type.RpcProvider.html  type.RpcProviderWithoutSigner.html
hopli_lib/exports/: index.html
hopli_lib/faucet/: index.html  struct.FaucetArgs.html
hopli_lib/identity/: enum.IdentitySubcommands.html  index.html  struct.ConvertPeerArgs.html
hopli_lib/key_pair/: fn.create_identity.html  fn.read_identities.html  fn.read_identity.html  fn.update_identity_password.html  index.html  struct.IdentityFileArgs.html  struct.IdentityFromDirectoryArgs.html  struct.ManagerPrivateKeyArgs.html  struct.NewPasswordArgs.html  struct.PasswordArgs.html  struct.PrivateKeyArgs.html  trait.ArgEnvReader.html
hopli_lib/methods/: enum.SafeTxOperation.html  fn.create_rpc_client_to_anvil.html  fn.debug_node_safe_module_setup_main.html  fn.debug_node_safe_module_setup_on_balance_and_registries.html  fn.deploy_multicall3_for_testing.html  fn.deploy_safe_module_for_single_edge_node.html  fn.deploy_safe_module_with_targets_and_nodes.html  fn.deregister_nodes_from_node_safe_registry_and_remove_from_module.html  fn.get_chain_id_and_safe_nonce.html  fn.get_native_and_token_balances.html  fn.get_registered_safes_for_nodes_on_node_safe_registry.html  fn.include_nodes_to_module.html  fn.migrate_nodes.html  fn.predict_module_address.html  index.html  (+10 more)
search.index/: 002cacfa4d9b.js  004e82bbb75a.js  0107a100a03d.js  01f4bb66175e.js  035450ac2858.js  037df56825b3.js  03ca07ea84e1.js  04b1b8e12471.js  04d734f3df0c.js  05d9492751b2.js  05e6fe78dc61.js  05fab7cb47fb.js  065e343cea5b.js  068eb8a0445e.js  06bd7b114887.js  0725cf1d291c.js  07f3aac43313.js  07fa4160aa36.js  0810ddcfa2f6.js  090fca983668.js  09167570089e.js  095f42319753.js  096a4ebac3c4.js  09ad11d572df.js  09e3dd66ecbe.js  0a8b5db75bb4.js  0ab81472dfdc.js  0bee8be13574.js  0bfd52439eea.js  0c08e08ebf37.js  0c4b7230cc5d.js  0c8a66b629ba.js  0c972890b742.js  0d5f26e0c326.js  0e10ebde5ed7.js  0e989eb438e0.js  0f20c0587182.js  0f51290080ea.js  0f7b5d8ad379.js  0f9d612740fe.js  (+320 more)
src/: constants.rs  environment_config.rs  faucet.rs  identity.rs  key_pair.rs  lib.rs  main.rs  methods.rs  payloads.rs  safe_module.rs  utils.rs  win_prob.rs
tests/: test_integration.rs
(+189 files in other folders)
