[package]
name = "hopli"
version = "0.13.0"
edition = "2021"
license = "GPL-3.0-only"

[lib]
name = "hopli_lib"
path = "src/lib.rs"

[[bin]]
name = "hopli"
path = "src/main.rs"

[features]
default = []
allocator-mimalloc = [
  "dep:mimalloc",
] # Use mimalloc as the global allocator on Linux
allocator-jemalloc = [
  "dep:tikv-jemallocator",
] # Use jemalloc as the global allocator on Linux

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive", "env", "string"] }
hex = "0.4.3"
hex-literal = "1.1.0"
lazy_static = "1.5.0"
rpassword = "7.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = [
  "rt-multi-thread",
  "macros",
  "tracing",
] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.20", features = [
  "env-filter",
  "fmt",
  "registry",
  "std",
] }
uuid = { version = "1.18.1" }
url = { version = "2.5.7", features = ["serde"] }

hopr-bindings = { git = "https://github.com/hoprnet/contracts", rev = "95289351c46a0ffd0644728a47a279ade36549fb" }
hopr-chain-types = { git = "https://github.com/hoprnet/hoprnet", branch = "master" }
hopr-crypto-keypair = { git = "https://github.com/hoprnet/hoprnet", branch = "master", features = [
  "to-file",
] }
hopr-crypto-types = { git = "https://github.com/hoprnet/hoprnet", branch = "master" }
hopr-internal-types = { git = "https://github.com/hoprnet/hoprnet", branch = "master" }
hopr-primitive-types = { git = "https://github.com/hoprnet/hoprnet", branch = "master" }

[dev-dependencies]
tempfile = "3.23.0"
env_logger = "0.11.8"

hopr-crypto-random = { git = "https://github.com/hoprnet/hoprnet", branch = "master" }

# Target-specific dependencies for memory allocators
[target.'cfg(target_os = "linux")'.dependencies]
mimalloc = { version = "0.1.48", default-features = false, optional = true, features = [
  "secure",
] }
tikv-jemallocator = { version = "0.6.1", optional = true }

[profile.dev]
panic = "abort"

# this profile focuses on the speed of compilation
[profile.candidate]
inherits = "release"
codegen-units = 16   # normal release default
lto = false          # do the smallest amount of link-time optimization
panic = "abort"
strip = true
opt-level = 2

# perform minimal optimizations to prevent stack overflows in large tests
[profile.test]
opt-level = 1

# this profile focuses on the best runtime performance and the smallest binary size
[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = true
opt-level = 3

# uses extended debug symbols for profiling but does not harm benchmarking performance
[profile.bench]
debug = 2
split-debuginfo = "off"
strip = false
