[package]
edition = "2024"
license = "GPL-3.0-only"
name    = "hopli"
version = "0.17.6"

[lib]
name = "hopli_lib"
path = "src/lib.rs"

[[bin]]
name = "hopli"
path = "src/main.rs"

[features]
allocator-jemalloc = [
  "dep:tikv-jemallocator",
] # Use jemalloc as the global allocator on Linux
allocator-mimalloc = [
  "dep:mimalloc",
] # Use mimalloc as the global allocator on Linux
default = []

[dependencies]
alloy-transport-http = { version = "2.0.4", features = ["reqwest-default-tls"] }
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive", "env", "string"] }
hex = "0.4.3"
hex-literal = "1.1.0"
lazy_static = "1.5.0"
rpassword = "7.5.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = [
  "macros",
  "rt-multi-thread",
  "tracing",
] }
tracing = { version = "0.1.43" }
tracing-subscriber = { version = "0.3.20", features = [
  "env-filter",
  "fmt",
  "registry",
  "std",
] }
url = { version = "2.5.8", features = ["serde"] }
uuid = { version = "1.23.4" }

hopr-bindings = "4.9.1"
hopr-types = { version = "1.11.1", features = [
  "chain",
  "crypto",
  "internal",
  "keypair",
  "keypair-to-file",
  "primitive",
  "random",
  "serde",
  "use-bindings",
] }


[dev-dependencies]
env_logger = "0.11.11"
tempfile   = "3.27.0"


# Target-specific dependencies for memory allocators
[target.'cfg(target_os = "linux")'.dependencies]
mimalloc = { version = "0.1.48", default-features = false, optional = true, features = [
  "secure",
] }
tikv-jemallocator = { version = "0.6.1", optional = true }

[profile.dev]
panic = "abort"

# this profile focuses on the speed of compilation
[profile.candidate]
codegen-units = 16        # normal release default
inherits      = "release"
lto           = false     # do the smallest amount of link-time optimization
opt-level     = 2
panic         = "abort"
strip         = true

# perform minimal optimizations to prevent stack overflows in large tests
[profile.test]
opt-level = 1

# this profile focuses on the best runtime performance and the smallest binary size
[profile.release]
codegen-units = 1
lto           = "fat"
opt-level     = 3
panic         = "abort"
strip         = true

# uses extended debug symbols for profiling but does not harm benchmarking performance
[profile.bench]
debug           = 2
split-debuginfo = "off"
strip           = false

[package.metadata.cargo-machete]
ignored = ["alloy-transport-http"]
